Fixed: wflow-consoleweb - Universal Theme - Checkbox or radio button not in form field are not visible. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/form.css
+++ b/wflow-consoleweb/src/main/webapp/universal/css/form.css
@@ -40,18 +40,6 @@ body input {
   line-height: normal;
 }
 
-body input[type="checkbox"],
-body input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-  visibility: hidden;
-  width:30px;
-}
-
-body input[type="checkbox"]:after, body input[type="radio"]:after {
-    visibility: visible;
-}
-
 body input[type="number"]::-webkit-inner-spin-button,
 body input[type="number"]::-webkit-outer-spin-button {
   height: auto;
